updated openAPI docs for tenant creation from license
